--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "xCi8rep_TvGs",
         "outputId": "1e3b3d2d-b227-4224-8e6f-e7811315b048",
@@ -91,7 +91,9 @@
         "with open(\"/content/Day2-Project-MessyData.txt\") as inFile:\n",
         "  data = inFile.read()\n",
         "\n",
-        "print(data)\n"
+        "print(data)\n",
+        "\n",
+        "records = data.split(\",\")\n"
       ]
     },
     {
@@ -107,8 +109,7 @@
         "\n",
         "print(\"Phylum\\t\\tCount\")\n",
         "for p in phyla:\n",
-        "    print(p, \"\\t\", phyla_count.count(p))\n",
-        ""
+        "    print(p, \"\\t\", phyla_count.count(p))\n"
       ]
     }
   ],
