--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,25 +63,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "xCi8rep_TvGs",
-        "outputId": "1e3b3d2d-b227-4224-8e6f-e7811315b048",
+        "outputId": "6e23ae03-4531-41d9-f9e4-93035c0a962c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 105
         }
       },
       "outputs": [
         {
           "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/content/Day2-Project-MessyData.txt'",
+          "ename": "SyntaxError",
+          "evalue": "expected ':' (ipython-input-965656003.py, line 10)",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2978071671.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Write your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Read file in as one block because too messy to read line by line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/Day2-Project-MessyData.txt\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0minFile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/Day2-Project-MessyData.txt'"
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-965656003.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    for entry in records\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
           ]
         }
       ],
@@ -91,9 +88,15 @@
         "with open(\"/content/Day2-Project-MessyData.txt\") as inFile:\n",
         "  data = inFile.read()\n",
         "\n",
-        "print(data)\n",
+        "#print(data)\n",
         "\n",
-        "records = data.split(\",\")\n"
+        "records = data.split(\",\")\n",
+        "\n",
+        "for entry in records\n",
+        "  records_list = entry.split(\"-\")\n",
+        "\n",
+        "print(records)\n",
+        "print(records_list)\n"
       ]
     },
     {
