--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,22 +63,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {
         "id": "xCi8rep_TvGs",
-        "outputId": "6e23ae03-4531-41d9-f9e4-93035c0a962c",
+        "outputId": "cda7b595-cd06-4f98-dd1b-64ca07fc6b21",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "expected ':' (ipython-input-965656003.py, line 10)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-965656003.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    for entry in records\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Edith Mcbride   -%1.21   -   Chloroflexi - \\n04/05/22   ', 'Herbert Tran   -   %7.29- \\nChloroflexi&Acidobacteria-   04/05/22 ', 'Paul Clarke -%12.52 \\n-   Chloroflexi&Acidobacteria - 04/05/22 ', 'Lucille Caldwell   \\n-   %5.13   - Chloroflexi   - 04/05/22', '\\nEduardo George   -%20.39- Chloroflexi&Bacillus \\n-04/05/22   ', '   Danny Mclaughlin-%30.82-   \\nActinomycetes -04/05/22 ', 'Stacy Vargas- %1.85   - \\nActinomycetes&Bacillus -01/08/22', '   Shaun Brock- \\n%17.98-Actinomycetes&Bacillus - 01/08/22 ', ' \\nErick Harper -%17.41- Acidobacteria - 01/08/22', ' \\nMichelle Howell -%28.59- Acidobacteria-   01/08/22   ', ' \\nCarroll Boyd- %14.51-   Actinomycetes&Acidobacteria   -   \\n01/08/22   ', ' Teresa Carter   - %19.64 - \\nChloroflexi-01/08/22   ', '   Jacob Kennedy - %11.40   \\n- Chloroflexi&Firmicutes   - 01/08/22', ' Craig Chambers- \\n%8.79 - Chloroflexi&Acidobacteria&Firmicutes   -01/08/22   ', ' Peggy Bell- %8.65 -Acidobacteria   - 01/08/22', '   Kenneth Cunningham -   %10.53-   Proteobacteria&Acidobacteria   - \\n01/08/22   ', '   Marvin Morgan-   %16.49- \\nProteobacteria&Acidobacteria&Firmicutes   -   01/08/22 ', 'Marjorie Russell \\n- %6.55 -   Proteobacteria&Acidobacteria&Firmicutes-   01/08/22 ', '\\nIsrael Cummings-   %11.86   -Cyanobacteria-  \\n01/08/22', '   June Doyle   -   %22.29 -  \\nCyanobacteria&Bacillus -01/08/22 ', ' Jaime Buchanan   -   \\n%8.35-   Chloroflexi&Cyanobacteria&Bacillus   -   01/08/22', '   \\nRhonda Farmer-%2.91 -   Chloroflexi&Cyanobacteria&Bacillus   \\n-01/08/22', ' Darren Mckenzie -%22.94-Proteobacteria \\n-01/08/22', 'Rufus Malone-%4.70   - Proteobacteria&Bacillus \\n- 01/08/22   ', 'Hubert Miles-   %3.59   \\n-Proteobacteria&Bacillus&Acidobacteria-   01/08/22   ', ' Joseph Bridges  -%5.66   - Proteobacteria&Bacillus&Actinomycetes&Acidobacteria \\n-   01/08/22 ', ' Sergio Murphy   -%17.51   -   \\nCyanobacteria   -   01/08/22 ', ' Audrey Ferguson - \\n%5.54-Cyanobacteria&Acidobacteria   -01/08/22 ', 'Edna Williams - \\n%17.13- Cyanobacteria&Acidobacteria-   04/05/22', '   Randy Fleming-   %21.13 -Cyanobacteria -04/05/22 ', 'Elisa Hart- %0.35   - Cyanobacteria&Actinomycetes-   04/05/22   ', '\\nErnesto Hunt - %13.91   -   Cyanobacteria&Actinomycetes -   \\n04/05/22', '   Shannon Chavez   -%19.26   - \\nBacillus- 04/05/22   ', ' Sammy Cain- %5.45-   \\nBacillus&Firmicutes -04/05/22 ', '   Steven Reeves -%5.50   \\n-   Bacillus-   04/05/22', ' Ruben Jones   - \\n%14.56 -   Bacillus&Acidobacteria-04/05/22 ', ' Essie Hansen-   %7.33   -   Bacillus&Acidobacteria&Firmicutes\\n- 04/05/22   ', '   Rene Hardy   - %20.22   - \\nCyanobacteria -   04/05/22 ', '   Lucy Snyder   - %8.67   \\n-Cyanobacteria&Firmicutes  - 04/05/22 ', 'Dallas Obrien -   \\n%8.31-   Cyanobacteria&Firmicutes -   15/03/22', '   Stacey Payne \\n-   %15.70   -   Chloroflexi&Cyanobacteria&Firmicutes -15/03/22   \\n', '   Tanya Cox   -   %6.74   -Bacillus   - \\n15/03/22 ', ' Melody Moran -   %30.84   \\n-Bacillus&Cyanobacteria-   15/03/22 ', ' Louise Becker   - \\n%12.31 - Proteobacteria&Bacillus&Cyanobacteria-   15/03/22 ', '\\nRyan Webster-%2.94 - Bacillus - 15/03/22 \\n', 'Justin Blake - %22.46   -Chloroflexi&Bacillus -   \\n15/03/22', '   Beverly Baldwin -   %6.60-   \\nChloroflexi&Bacillus&Cyanobacteria -15/03/22   ', '   Dale Brady   \\n-   %6.27 - Bacillus   -15/03/22 ', 'Guadalupe Potter -%21.12   - Bacillus- 15/03/22   ', ' \\nDesiree Butler -%2.10   -Chloroflexi- 15/03/22  \\n', 'Sonja Barnett - %14.22 -Chloroflexi&Cyanobacteria-   \\n15/03/22', ' Angelica Garza-%11.60-Chloroflexi&Cyanobacteria   \\n-   15/03/22   ', '   Jamie Welch   - %25.27   - \\nChloroflexi&Cyanobacteria&Firmicutes -15/03/22   ', '   Rex Hudson   \\n-%8.26-   Actinomycetes- 04/05/22 ', '   Nadine Gibbs \\n-   %30.80 -   Actinomycetes&Bacillus   - 04/05/22   ', ' \\nHannah Pratt-   %22.61   -   Actinomycetes&Bacillus   \\n-04/05/22', 'Gayle Richards-%22.19 - \\nProteobacteria&Actinomycetes&Bacillus -04/05/22   ', 'Stanley Holland \\n- %7.47   - Firmicutes - 04/05/22 ', ' Anna Dean-%5.49 - Bacillus&Firmicutes -   04/05/22   ', '\\nTerrance Saunders -   %23.70  -Proteobacteria&Bacillus&Firmicutes \\n- 04/05/22 ', '   Brandi Zimmerman - %26.66 - \\nFirmicutes   -04/05/22 ', 'Guadalupe Freeman - %25.95- \\nProteobacteria&Firmicutes -   21/06/22   ', 'Irving Patterson \\n-%19.55 - Proteobacteria&Chloroflexi&Firmicutes -   21/06/22 ', 'Karl Ross-   %15.68-   Chloroflexi -   21/06/22 ', ' Brandy Cortez -%23.57-   Chloroflexi&Firmicutes   -21/06/22', ' \\nMamie Riley   -%29.32- Actinomycetes-21/06/22 ', 'Mike Thornton   - %26.44 -   Actinomycetes   - 21/06/22', ' \\nJamie Vaughn   - %17.24-Proteobacteria - 21/06/22   ', ' \\nNoah Day -   %8.49   -Proteobacteria   -21/06/22   \\n', 'Josephine Keller -%13.10 -Proteobacteria-   21/06/22 ', '   Tracey Wolfe-%20.39 - Firmicutes   - 21/06/22 ', '\\nIgnacio Parks-%14.70   - Chloroflexi&Firmicutes -21/06/22 \\n', ' Beatrice Newman -%22.45   -Chloroflexi&Actinomycetes&Firmicutes \\n-   21/06/22', ' Andre Norris   -   %28.46   -   \\nFirmicutes-   21/06/22 ', '   Albert Lewis - %23.89-   \\nCyanobacteria&Firmicutes- 01/08/22', '   Javier Bailey   -   \\n%24.49   - Cyanobacteria&Firmicutes - 01/08/22   ', ' Everett Lyons -%1.81-   Cyanobacteria&Firmicutes - 01/08/22 ', '   \\nAbraham Maxwell- %6.81   -Proteobacteria-   01/08/22   \\n', '   Traci Craig -%0.65- Proteobacteria&Bacillus- \\n01/08/22 ', ' Jeffrey Jenkins   -%26.45- \\nProteobacteria&Bacillus&Acidobacteria   -   01/08/22', '   Merle Wilson \\n-   %7.69 - Actinomycetes- 01/08/22', 'Janis Franklin   \\n-%8.74   - Actinomycetes&Cyanobacteria   -01/08/22 ', '  \\nLeonard Guerrero -   %1.86   -Bacillus  \\n-01/08/22', 'Lana Sanchez-%14.75   - Bacillus-   \\n01/08/22   ', 'Donna Ball - %28.10  - \\nBacillus&Acidobacteria-   01/08/22   ', ' Terrell Barber   - \\n%9.91   - Proteobacteria -01/08/22   ', 'Jody Flores- \\n%16.34 - Proteobacteria -   01/08/22', '   Daryl Herrera \\n-%27.57- Chloroflexi-   21/06/22   ', ' Miguel Mcguire-%5.25- Chloroflexi&Acidobacteria   -   01/08/22 ', '   \\nRogelio Gonzalez- %9.51-   Chloroflexi&Cyanobacteria&Acidobacteria   \\n-   21/06/22   ', '   Lora Hammond -%20.56 - \\nProteobacteria-   21/06/22', 'Owen Ward- %21.64   -   \\nProteobacteria&Bacillus-21/06/22', 'Malcolm Morales -   \\n%24.99   -   Proteobacteria&Bacillus&Cyanobacteria- 21/06/22 ', '   \\nEric Mcdaniel -%29.70- Proteobacteria - 21/06/22 \\n', 'Madeline Estrada-   %15.52-Proteobacteria-   21/06/22 \\n', ' Leticia Manning-%15.70 - Proteobacteria&Actinomycetes- \\n21/06/22 ', '   Mario Wallace - %12.36 -Proteobacteria - \\n21/06/22', 'Lewis Glover-   %13.66   -   \\nProteobacteria&Chloroflexi-21/06/22', '   Gail Phelps   -%30.52   \\n- Proteobacteria&Chloroflexi&Acidobacteria   - 21/06/22 ', ' Myrtle Morris \\n-   %22.66   - Proteobacteria&Chloroflexi&Acidobacteria-21/06/22\\n']\n",
+            "[' Myrtle Morris \\n', '   %22.66   ', ' Proteobacteria&Chloroflexi&Acidobacteria', '21/06/22\\n']\n"
           ]
         }
       ],
@@ -92,8 +91,12 @@
         "\n",
         "records = data.split(\",\")\n",
         "\n",
-        "for entry in records\n",
+        "for entry in records:\n",
+        "\n",
         "  records_list = entry.split(\"-\")\n",
+        "  for items in entry:\n",
+        "    item_list = items\n",
+        "\n",
         "\n",
         "print(records)\n",
         "print(records_list)\n"
