--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "xCi8rep_TvGs",
         "outputId": "bf5063d2-c534-404d-b9c1-30abb2894629",
@@ -910,7 +910,7 @@
         "records = data.split(\",\")\n",
         "#print(records)\n",
         "\n",
-        "clean_record = []\n",
+        "clean_record = [] # creating an empthy list\n",
         "\n",
         "for entry in records:\n",
         "    items = entry.split(\"-\")\n",
