--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,11 +63,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
-        "id": "xCi8rep_TvGs"
+        "id": "xCi8rep_TvGs",
+        "outputId": "a01cfb6f-6663-4560-85ac-f3ecb3ddc7dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 207
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'str' object has no attribute 'append'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2118544684.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mclean_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# removing whitespaces applied to every element of the list -> strip is only applicable to strings (here elements)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mclean_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#removing newlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mclean_elements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_elements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_elements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
+          ]
+        }
+      ],
       "source": [
         "# Write your code here\n",
         "# Read file in as one block because too messy to read line by line\n",
@@ -79,19 +96,19 @@
         "records = data.split(\",\") # split is giving a list-output\n",
         "#print(records)\n",
         "\n",
-        "clean_record = [] # creating an empthy list\n",
+        "clean_records = [] # creating an empthy list\n",
         "\n",
         "for entry in records:\n",
         "    items = entry.split(\"-\")\n",
-        "    #print(entry)\n",
-        "    #print(\"~~~\")\n",
+        "    #print(items)\n",
         "\n",
-        "    clean_record = []\n",
+        "    clean_elements = []\n",
+        "\n",
         "    for elements in items:\n",
-        "      clean_elements = elements.strip() # removing whitespaces\n",
-        "      clean_elements = elements.replace(\"\\n\",\"\") #removing newlines\n",
-        "      clean_record.append(clean_elements)\n",
-        "      print(entry)\n",
+        "        clean_elements = elements.strip() # removing whitespaces applied to every element of the list -> strip is only applicable to strings (here elements)\n",
+        "        clean_elements = elements.replace(\"\\n\",\"\") #removing newlines\n",
+        "        clean_elements.append(clean_elements)\n",
+        "        print(clean_elements)\n",
         "\n"
       ]
     },
