--- a/Day2/P34B-Day2-Project-MessyData.ipynb
+++ b/Day2/P34B-Day2-Project-MessyData.ipynb
@@ -63,25 +63,419 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 68,
       "metadata": {
         "id": "xCi8rep_TvGs",
-        "outputId": "a01cfb6f-6663-4560-85ac-f3ecb3ddc7dc",
+        "outputId": "5fe31361-9ac7-48e4-8cc0-fa4c3b5abb50",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 207
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'str' object has no attribute 'append'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2118544684.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mclean_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# removing whitespaces applied to every element of the list -> strip is only applicable to strings (here elements)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mclean_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#removing newlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mclean_elements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_elements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_elements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Edith Mcbride   \n",
+            "%1.21   \n",
+            "   Chloroflexi \n",
+            " 04/05/22   \n",
+            "Herbert Tran   \n",
+            "   %7.29\n",
+            " Chloroflexi&Acidobacteria\n",
+            "   04/05/22 \n",
+            "Paul Clarke \n",
+            "%12.52 \n",
+            "   Chloroflexi&Acidobacteria \n",
+            " 04/05/22 \n",
+            "Lucille Caldwell   \n",
+            "   %5.13   \n",
+            " Chloroflexi   \n",
+            " 04/05/22\n",
+            "Eduardo George   \n",
+            "%20.39\n",
+            " Chloroflexi&Bacillus \n",
+            "04/05/22   \n",
+            "   Danny Mclaughlin\n",
+            "%30.82\n",
+            "   Actinomycetes \n",
+            "04/05/22 \n",
+            "Stacy Vargas\n",
+            " %1.85   \n",
+            " Actinomycetes&Bacillus \n",
+            "01/08/22\n",
+            "   Shaun Brock\n",
+            " %17.98\n",
+            "Actinomycetes&Bacillus \n",
+            " 01/08/22 \n",
+            " Erick Harper \n",
+            "%17.41\n",
+            " Acidobacteria \n",
+            " 01/08/22\n",
+            " Michelle Howell \n",
+            "%28.59\n",
+            " Acidobacteria\n",
+            "   01/08/22   \n",
+            " Carroll Boyd\n",
+            " %14.51\n",
+            "   Actinomycetes&Acidobacteria   \n",
+            "   01/08/22   \n",
+            " Teresa Carter   \n",
+            " %19.64 \n",
+            " Chloroflexi\n",
+            "01/08/22   \n",
+            "   Jacob Kennedy \n",
+            " %11.40   \n",
+            " Chloroflexi&Firmicutes   \n",
+            " 01/08/22\n",
+            " Craig Chambers\n",
+            " %8.79 \n",
+            " Chloroflexi&Acidobacteria&Firmicutes   \n",
+            "01/08/22   \n",
+            " Peggy Bell\n",
+            " %8.65 \n",
+            "Acidobacteria   \n",
+            " 01/08/22\n",
+            "   Kenneth Cunningham \n",
+            "   %10.53\n",
+            "   Proteobacteria&Acidobacteria   \n",
+            " 01/08/22   \n",
+            "   Marvin Morgan\n",
+            "   %16.49\n",
+            " Proteobacteria&Acidobacteria&Firmicutes   \n",
+            "   01/08/22 \n",
+            "Marjorie Russell \n",
+            " %6.55 \n",
+            "   Proteobacteria&Acidobacteria&Firmicutes\n",
+            "   01/08/22 \n",
+            "Israel Cummings\n",
+            "   %11.86   \n",
+            "Cyanobacteria\n",
+            "  01/08/22\n",
+            "   June Doyle   \n",
+            "   %22.29 \n",
+            "  Cyanobacteria&Bacillus \n",
+            "01/08/22 \n",
+            " Jaime Buchanan   \n",
+            "   %8.35\n",
+            "   Chloroflexi&Cyanobacteria&Bacillus   \n",
+            "   01/08/22\n",
+            "   Rhonda Farmer\n",
+            "%2.91 \n",
+            "   Chloroflexi&Cyanobacteria&Bacillus   \n",
+            "01/08/22\n",
+            " Darren Mckenzie \n",
+            "%22.94\n",
+            "Proteobacteria \n",
+            "01/08/22\n",
+            "Rufus Malone\n",
+            "%4.70   \n",
+            " Proteobacteria&Bacillus \n",
+            " 01/08/22   \n",
+            "Hubert Miles\n",
+            "   %3.59   \n",
+            "Proteobacteria&Bacillus&Acidobacteria\n",
+            "   01/08/22   \n",
+            " Joseph Bridges  \n",
+            "%5.66   \n",
+            " Proteobacteria&Bacillus&Actinomycetes&Acidobacteria \n",
+            "   01/08/22 \n",
+            " Sergio Murphy   \n",
+            "%17.51   \n",
+            "   Cyanobacteria   \n",
+            "   01/08/22 \n",
+            " Audrey Ferguson \n",
+            " %5.54\n",
+            "Cyanobacteria&Acidobacteria   \n",
+            "01/08/22 \n",
+            "Edna Williams \n",
+            " %17.13\n",
+            " Cyanobacteria&Acidobacteria\n",
+            "   04/05/22\n",
+            "   Randy Fleming\n",
+            "   %21.13 \n",
+            "Cyanobacteria \n",
+            "04/05/22 \n",
+            "Elisa Hart\n",
+            " %0.35   \n",
+            " Cyanobacteria&Actinomycetes\n",
+            "   04/05/22   \n",
+            "Ernesto Hunt \n",
+            " %13.91   \n",
+            "   Cyanobacteria&Actinomycetes \n",
+            "   04/05/22\n",
+            "   Shannon Chavez   \n",
+            "%19.26   \n",
+            " Bacillus\n",
+            " 04/05/22   \n",
+            " Sammy Cain\n",
+            " %5.45\n",
+            "   Bacillus&Firmicutes \n",
+            "04/05/22 \n",
+            "   Steven Reeves \n",
+            "%5.50   \n",
+            "   Bacillus\n",
+            "   04/05/22\n",
+            " Ruben Jones   \n",
+            " %14.56 \n",
+            "   Bacillus&Acidobacteria\n",
+            "04/05/22 \n",
+            " Essie Hansen\n",
+            "   %7.33   \n",
+            "   Bacillus&Acidobacteria&Firmicutes\n",
+            " 04/05/22   \n",
+            "   Rene Hardy   \n",
+            " %20.22   \n",
+            " Cyanobacteria \n",
+            "   04/05/22 \n",
+            "   Lucy Snyder   \n",
+            " %8.67   \n",
+            "Cyanobacteria&Firmicutes  \n",
+            " 04/05/22 \n",
+            "Dallas Obrien \n",
+            "   %8.31\n",
+            "   Cyanobacteria&Firmicutes \n",
+            "   15/03/22\n",
+            "   Stacey Payne \n",
+            "   %15.70   \n",
+            "   Chloroflexi&Cyanobacteria&Firmicutes \n",
+            "15/03/22   \n",
+            "   Tanya Cox   \n",
+            "   %6.74   \n",
+            "Bacillus   \n",
+            " 15/03/22 \n",
+            " Melody Moran \n",
+            "   %30.84   \n",
+            "Bacillus&Cyanobacteria\n",
+            "   15/03/22 \n",
+            " Louise Becker   \n",
+            " %12.31 \n",
+            " Proteobacteria&Bacillus&Cyanobacteria\n",
+            "   15/03/22 \n",
+            "Ryan Webster\n",
+            "%2.94 \n",
+            " Bacillus \n",
+            " 15/03/22 \n",
+            "Justin Blake \n",
+            " %22.46   \n",
+            "Chloroflexi&Bacillus \n",
+            "   15/03/22\n",
+            "   Beverly Baldwin \n",
+            "   %6.60\n",
+            "   Chloroflexi&Bacillus&Cyanobacteria \n",
+            "15/03/22   \n",
+            "   Dale Brady   \n",
+            "   %6.27 \n",
+            " Bacillus   \n",
+            "15/03/22 \n",
+            "Guadalupe Potter \n",
+            "%21.12   \n",
+            " Bacillus\n",
+            " 15/03/22   \n",
+            " Desiree Butler \n",
+            "%2.10   \n",
+            "Chloroflexi\n",
+            " 15/03/22  \n",
+            "Sonja Barnett \n",
+            " %14.22 \n",
+            "Chloroflexi&Cyanobacteria\n",
+            "   15/03/22\n",
+            " Angelica Garza\n",
+            "%11.60\n",
+            "Chloroflexi&Cyanobacteria   \n",
+            "   15/03/22   \n",
+            "   Jamie Welch   \n",
+            " %25.27   \n",
+            " Chloroflexi&Cyanobacteria&Firmicutes \n",
+            "15/03/22   \n",
+            "   Rex Hudson   \n",
+            "%8.26\n",
+            "   Actinomycetes\n",
+            " 04/05/22 \n",
+            "   Nadine Gibbs \n",
+            "   %30.80 \n",
+            "   Actinomycetes&Bacillus   \n",
+            " 04/05/22   \n",
+            " Hannah Pratt\n",
+            "   %22.61   \n",
+            "   Actinomycetes&Bacillus   \n",
+            "04/05/22\n",
+            "Gayle Richards\n",
+            "%22.19 \n",
+            " Proteobacteria&Actinomycetes&Bacillus \n",
+            "04/05/22   \n",
+            "Stanley Holland \n",
+            " %7.47   \n",
+            " Firmicutes \n",
+            " 04/05/22 \n",
+            " Anna Dean\n",
+            "%5.49 \n",
+            " Bacillus&Firmicutes \n",
+            "   04/05/22   \n",
+            "Terrance Saunders \n",
+            "   %23.70  \n",
+            "Proteobacteria&Bacillus&Firmicutes \n",
+            " 04/05/22 \n",
+            "   Brandi Zimmerman \n",
+            " %26.66 \n",
+            " Firmicutes   \n",
+            "04/05/22 \n",
+            "Guadalupe Freeman \n",
+            " %25.95\n",
+            " Proteobacteria&Firmicutes \n",
+            "   21/06/22   \n",
+            "Irving Patterson \n",
+            "%19.55 \n",
+            " Proteobacteria&Chloroflexi&Firmicutes \n",
+            "   21/06/22 \n",
+            "Karl Ross\n",
+            "   %15.68\n",
+            "   Chloroflexi \n",
+            "   21/06/22 \n",
+            " Brandy Cortez \n",
+            "%23.57\n",
+            "   Chloroflexi&Firmicutes   \n",
+            "21/06/22\n",
+            " Mamie Riley   \n",
+            "%29.32\n",
+            " Actinomycetes\n",
+            "21/06/22 \n",
+            "Mike Thornton   \n",
+            " %26.44 \n",
+            "   Actinomycetes   \n",
+            " 21/06/22\n",
+            " Jamie Vaughn   \n",
+            " %17.24\n",
+            "Proteobacteria \n",
+            " 21/06/22   \n",
+            " Noah Day \n",
+            "   %8.49   \n",
+            "Proteobacteria   \n",
+            "21/06/22   \n",
+            "Josephine Keller \n",
+            "%13.10 \n",
+            "Proteobacteria\n",
+            "   21/06/22 \n",
+            "   Tracey Wolfe\n",
+            "%20.39 \n",
+            " Firmicutes   \n",
+            " 21/06/22 \n",
+            "Ignacio Parks\n",
+            "%14.70   \n",
+            " Chloroflexi&Firmicutes \n",
+            "21/06/22 \n",
+            " Beatrice Newman \n",
+            "%22.45   \n",
+            "Chloroflexi&Actinomycetes&Firmicutes \n",
+            "   21/06/22\n",
+            " Andre Norris   \n",
+            "   %28.46   \n",
+            "   Firmicutes\n",
+            "   21/06/22 \n",
+            "   Albert Lewis \n",
+            " %23.89\n",
+            "   Cyanobacteria&Firmicutes\n",
+            " 01/08/22\n",
+            "   Javier Bailey   \n",
+            "   %24.49   \n",
+            " Cyanobacteria&Firmicutes \n",
+            " 01/08/22   \n",
+            " Everett Lyons \n",
+            "%1.81\n",
+            "   Cyanobacteria&Firmicutes \n",
+            " 01/08/22 \n",
+            "   Abraham Maxwell\n",
+            " %6.81   \n",
+            "Proteobacteria\n",
+            "   01/08/22   \n",
+            "   Traci Craig \n",
+            "%0.65\n",
+            " Proteobacteria&Bacillus\n",
+            " 01/08/22 \n",
+            " Jeffrey Jenkins   \n",
+            "%26.45\n",
+            " Proteobacteria&Bacillus&Acidobacteria   \n",
+            "   01/08/22\n",
+            "   Merle Wilson \n",
+            "   %7.69 \n",
+            " Actinomycetes\n",
+            " 01/08/22\n",
+            "Janis Franklin   \n",
+            "%8.74   \n",
+            " Actinomycetes&Cyanobacteria   \n",
+            "01/08/22 \n",
+            "  Leonard Guerrero \n",
+            "   %1.86   \n",
+            "Bacillus  \n",
+            "01/08/22\n",
+            "Lana Sanchez\n",
+            "%14.75   \n",
+            " Bacillus\n",
+            "   01/08/22   \n",
+            "Donna Ball \n",
+            " %28.10  \n",
+            " Bacillus&Acidobacteria\n",
+            "   01/08/22   \n",
+            " Terrell Barber   \n",
+            " %9.91   \n",
+            " Proteobacteria \n",
+            "01/08/22   \n",
+            "Jody Flores\n",
+            " %16.34 \n",
+            " Proteobacteria \n",
+            "   01/08/22\n",
+            "   Daryl Herrera \n",
+            "%27.57\n",
+            " Chloroflexi\n",
+            "   21/06/22   \n",
+            " Miguel Mcguire\n",
+            "%5.25\n",
+            " Chloroflexi&Acidobacteria   \n",
+            "   01/08/22 \n",
+            "   Rogelio Gonzalez\n",
+            " %9.51\n",
+            "   Chloroflexi&Cyanobacteria&Acidobacteria   \n",
+            "   21/06/22   \n",
+            "   Lora Hammond \n",
+            "%20.56 \n",
+            " Proteobacteria\n",
+            "   21/06/22\n",
+            "Owen Ward\n",
+            " %21.64   \n",
+            "   Proteobacteria&Bacillus\n",
+            "21/06/22\n",
+            "Malcolm Morales \n",
+            "   %24.99   \n",
+            "   Proteobacteria&Bacillus&Cyanobacteria\n",
+            " 21/06/22 \n",
+            "   Eric Mcdaniel \n",
+            "%29.70\n",
+            " Proteobacteria \n",
+            " 21/06/22 \n",
+            "Madeline Estrada\n",
+            "   %15.52\n",
+            "Proteobacteria\n",
+            "   21/06/22 \n",
+            " Leticia Manning\n",
+            "%15.70 \n",
+            " Proteobacteria&Actinomycetes\n",
+            " 21/06/22 \n",
+            "   Mario Wallace \n",
+            " %12.36 \n",
+            "Proteobacteria \n",
+            " 21/06/22\n",
+            "Lewis Glover\n",
+            "   %13.66   \n",
+            "   Proteobacteria&Chloroflexi\n",
+            "21/06/22\n",
+            "   Gail Phelps   \n",
+            "%30.52   \n",
+            " Proteobacteria&Chloroflexi&Acidobacteria   \n",
+            " 21/06/22 \n",
+            " Myrtle Morris \n",
+            "   %22.66   \n",
+            " Proteobacteria&Chloroflexi&Acidobacteria\n",
+            "21/06/22\n"
           ]
         }
       ],
@@ -105,9 +499,9 @@
         "    clean_elements = []\n",
         "\n",
         "    for elements in items:\n",
-        "        clean_elements = elements.strip() # removing whitespaces applied to every element of the list -> strip is only applicable to strings (here elements)\n",
+        "        clean_elements = elements.strip(\"\") # removing whitespaces applied to every element of the list -> strip is only applicable to strings (here elements)\n",
         "        clean_elements = elements.replace(\"\\n\",\"\") #removing newlines\n",
-        "        clean_elements.append(clean_elements)\n",
+        "        clean_records.append(clean_elements)\n",
         "        print(clean_elements)\n",
         "\n"
       ]
