--- a/Day2/P34B-Day2-Conditionals.ipynb
+++ b/Day2/P34B-Day2-Conditionals.ipynb
@@ -42,10 +42,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "Rraq4b3pogPW",
-        "outputId": "61c634d2-1004-4d87-fda5-263ebb1d1d2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "61c634d2-1004-4d87-fda5-263ebb1d1d2f"
       },
       "outputs": [
         {
@@ -109,11 +109,11 @@
       "execution_count": 35,
       "metadata": {
         "id": "zsL_9VsbB1xG",
-        "outputId": "6144e0ad-2209-4e2b-9a75-2b302d88a9bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
-        }
+        },
+        "outputId": "6144e0ad-2209-4e2b-9a75-2b302d88a9bd"
       },
       "outputs": [
         {
@@ -197,11 +197,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "AWuYCYIHfazI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AWuYCYIHfazI",
+        "outputId": "8a167974-3708-4a52-8c80-bb8bed3d314d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TP53 has p<0.05\n"
+          ]
+        }
+      ],
       "source": [
         "gene_data = [[\"TP53\", 0.0001],[\"BRCA1\", 0.002],[\"EGFR\", 0.15],[\"KRAS\", 0.00001],[\"MYC\", 0.05]]\n",
         "\n",
@@ -222,18 +234,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "cSlZKp4LgsXg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cSlZKp4LgsXg",
+        "outputId": "e9369674-5e77-4125-f23b-c9937ab2a209"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TP53 has p<0.05\n",
+            "BRCA1 has p<0.05\n",
+            "KRAS has p<0.05\n",
+            "~~~~\n",
+            "TP53 has p<0.05\n",
+            "BRCA1 has p<0.05\n",
+            "KRAS has p<0.05\n"
+          ]
+        }
+      ],
       "source": [
         "for gene in gene_data:\n",
         "  geneID = gene[0]\n",
         "  geneValue = gene[1]\n",
         "\n",
         "  if geneValue < 0.05:\n",
-        "    print(geneID, \"has p<0.05\")\n"
+        "    print(geneID, \"has p<0.05\")\n",
+        "\n",
+        "#shorter with tuples\n",
+        "print(\"~~~~\")\n",
+        "for geneID, geneValue in gene_data:\n",
+        "    if geneValue < 0.05:\n",
+        "      print(geneID, \"has p<0.05\")"
       ]
     },
     {
