--- a/Day2/P34B-Day2-Conditionals.ipynb
+++ b/Day2/P34B-Day2-Conditionals.ipynb
@@ -522,27 +522,83 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "zPq-SzUdzZAc",
-        "outputId": "3518925b-f039-46f8-b4ef-43413a770c57"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c77226d-69b7-45ad-c4e1-be1998edd174"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "\n",
+            "exercise 2\n",
+            "TP53\n",
+            "MYC\n",
+            "\n",
+            "exercise3\n",
+            "TP53 medium\n",
+            "BRCA1 medium\n",
+            "EGFR\n",
+            "KRAS\n",
+            "MYC medium\n",
+            "PTEN medium\n",
+            "CDKN2A\n",
+            "AKT1 medium\n",
+            "ERBB2 medium\n",
+            "RB1\n",
+            "\n",
+            "exercise4\n",
             "KRAS\n",
             "PTEN\n",
-            "ERBB2\n"
+            "ERBB2\n",
+            "\n",
+            "exercise5\n",
+            "TP53 is medium\n",
+            "BRCA1 is low\n",
+            "EGFR is high\n",
+            "KRAS is low\n",
+            "MYC is medium\n",
+            "PTEN is low\n",
+            "CDKN2A is high\n",
+            "AKT1 is medium\n",
+            "ERBB2 is low\n",
+            "RB1 is high\n"
           ]
         }
       ],
       "source": [
         "gene_expression = [(\"TP53\", 2.5), (\"BRCA1\", 1.8), (\"EGFR\", 3.2), (\"KRAS\", 0.9), (\"MYC\", 2.7), (\"PTEN\", 1.2), (\"CDKN2A\", 4.5), (\"AKT1\", 2.0), (\"ERBB2\", 1.5), (\"RB1\", 3.8)]\n",
         "\n",
+        "print(\"\\nexercise 2\")\n",
+        "for gene, expression in gene_expression: # gene, expression = tuple assignment\n",
+        "    if expression > 2 and expression < 3:\n",
+        "      print(gene)\n",
+        "\n",
+        "print(\"\\nexercise3\")\n",
         "for gene, expression in gene_expression:\n",
-        "    ..."
+        "    if expression < 1 or expression > 3:\n",
+        "      print(gene)\n",
+        "    else:\n",
+        "       print(gene, \"medium\")\n",
+        "\n",
+        "print(\"\\nexercise4\")\n",
+        "for gene, expression in gene_expression:\n",
+        "    if expression < 2 and gene != \"BRCA1\":\n",
+        "      print(gene)\n",
+        "\n",
+        "print(\"\\nexercise5\")\n",
+        "for gene, expression in gene_expression:\n",
+        "    if expression < 2:\n",
+        "      print(gene, \"is low\")\n",
+        "    elif expression >= 2 and expression <= 3:\n",
+        "      print (gene, \"is medium\")\n",
+        "    elif expression >3:\n",
+        "      print (gene, \"is high\")"
       ]
     },
     {
